- added custom timeseries model - added data processors